tooling/nargo_cli/tests/snapshots/execution_failure/regression_9266/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Attempt to pop from an empty vector
  ┌─ src/main.nr:4:18
  │
4 │     let (_, f) = a.pop_back();
  │                  ---------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:4:18

error: Assertion failed: Attempt to pop from an empty vector
  ┌─ src/main.nr:4:18
  │
4 │     let (_, f) = a.pop_back();
  │                  ----------
  │
  = Call stack:
    1: main
            at src/main.nr:4:18

Failed assertion
