tooling/nargo_cli/tests/snapshots/execution_failure/regression_9266/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Attempt to pop from an empty vector
  ┌─ src/main.nr:4:18
  │
4 │     let (_, f) = a.pop_back();
  │                  ----------
  │
  = Call stack:
    1: main
            at src/main.nr:4:18

Failed assertion
