tooling/nargo_cli/tests/snapshots/execution_failure/regression_9266/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to pop from an empty vector
  ┌─ src/main.nr:4:18
  │
4 │     let (_, f) = a.pop_back();
  │                  ------------ Assertion failed
  │
  = Call stack:
    1: ?
            at src/main.nr:2:4
    2: main
            at src/main.nr:4:18

Error interpreting main function
